<?xml version="1.0"?>
<package>
  <name>testit_msgs</name>
  <version>0.0.0</version>
  <description>Scalable Long-Term Autonomy Testing toolkit message descriptions</description>

  <maintainer email="gert.kanter@taltech.ee">Gert Kanter</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/testit</url>
  <url type="bugtracker">https://github.com/GertKanter/testit/issues</url>
  <url type="repository">https://github.com/GertKanter/testit</url>


  <author email="gert.kanter@taltech.ee">Gert Kanter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <export>
    <architecture_independent/>
  </export>
</package>
